tests/snapshots/trace_cli@9437184858979545810.snap
---
source: tests/trace_cli.rs
info: "set ergo2024\nset predicate_style BindingMode\nrules"
---
The two rulesets are described by the following sets of rules, with differences highlighted.
The old ruleset is on the left, and the new one on the right.

 real, m ⊢ p0: T0,  real, m ⊢ p1: T1                                              | real, m ⊢ p0: T0,  real, m ⊢ p1: T1
 ----------------------------------- "Constructor"                                | ----------------------------------- "Constructor"
 _, m ⊢ [p0, p1]: [T0, T1]                                                        | _, m ⊢ [p0, p1]: [T0, T1]

 inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1                                            | inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1
 ------------------------------------- "ConstructorRef"                           | ------------------------------------- "ConstructorRef"
 r, m ⊢ [p0, p1]: &[T0, T1]                                                       | r, m ⊢ [p0, p1]: &[T0, T1]

 inh, ro ⊢ p0: &mut T0,  inh, ro ⊢ p1: &mut T1                                    | inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1
 --------------------------------------------- "ConstructorRef"                   | ------------------------------------- "ConstructorRef(ForceReadOnly)"
 r, ro ⊢ [p0, p1]: &mut [T0, T1]                                                  | r, ro ⊢ [p0, p1]: &mut [T0, T1]

 inh, rw ⊢ p0: &mut T0,  inh, rw ⊢ p1: &mut T1                                    | inh, rw ⊢ p0: &mut T0,  inh, rw ⊢ p1: &mut T1
 --------------------------------------------- "ConstructorRef"                   | --------------------------------------------- "ConstructorRef"
 r, rw ⊢ [p0, p1]: &mut [T0, T1]                                                  | r, rw ⊢ [p0, p1]: &mut [T0, T1]

 inh, ro ⊢ [p0, p1]: &T                                                           | inh, ro ⊢ [p0, p1]: &T
 ---------------------- "ConstructorMultiRef"                                     | ---------------------- "ConstructorMultiRef"
 r, m ⊢ [p0, p1]: &&T                                                             | r, m ⊢ [p0, p1]: &&T

 inh, ro ⊢ [p0, p1]: &T                                                           | inh, ro ⊢ [p0, p1]: &T
 ------------------------ "ConstructorMultiRef"                                   | ------------------------ "ConstructorMultiRef"
 r, m ⊢ [p0, p1]: &&mut T                                                         | r, m ⊢ [p0, p1]: &&mut T

 inh, ro ⊢ [p0, p1]: &T                                                           | inh, ro ⊢ [p0, p1]: &T
 ------------------------ "ConstructorMultiRef"                                   | ------------------------ "ConstructorMultiRef"
 r, m ⊢ [p0, p1]: &mut &T                                                         | r, m ⊢ [p0, p1]: &mut &T

 inh, ro ⊢ [p0, p1]: &mut T                                                       | inh, ro ⊢ [p0, p1]: &T
 ----------------------------- "ConstructorMultiRef"                              | ----------------------------- "ConstructorMultiRef(ForceReadOnly)"
 r, ro ⊢ [p0, p1]: &mut &mut T                                                    | r, ro ⊢ [p0, p1]: &mut &mut T

 inh, rw ⊢ [p0, p1]: &mut T                                                       | inh, rw ⊢ [p0, p1]: &mut T
 ----------------------------- "ConstructorMultiRef"                              | ----------------------------- "ConstructorMultiRef"
 r, rw ⊢ [p0, p1]: &mut &mut T                                                    | r, rw ⊢ [p0, p1]: &mut &mut T

 real, ro ⊢ p: T                                                                  | real, ro ⊢ p: T
 ---------------- "Deref"                                                         | ---------------- "Deref(EatOuter)"
 real, m ⊢ &p: &T                                                                 | real, m ⊢ &p: &T

 _, ro ⊢ p: T                                                                     | _, ro ⊢ p: T
 ------------------------------------- "Deref"                                    | ------------------------------------- "Deref(EatOuter)"
 inh, m ⊢ &p: &T, T is not a reference                                            | inh, m ⊢ &p: &T, T is not a reference

 real, ro ⊢ p: &T                                                                 | inh, ro ⊢ p: &T
 ---------------- "Deref"                                                         | ---------------- "Deref(EatInner)"
 inh, m ⊢ &p: &&T                                                                 | inh, m ⊢ &p: &&T

 real, ro ⊢ p: &mut T                                                             | inh, ro ⊢ p: &T
 -------------------- "Deref"                                                     | -------------------- "DerefMutWithShared(EatInner)"
 inh, m ⊢ &p: &&mut T                                                             | inh, m ⊢ &p: &&mut T

 real, m ⊢ p: T                                                                   | real, m ⊢ p: T
 ------------------------ "Deref"                                                 | ------------------------ "Deref(EatOuter)"
 real, m ⊢ &mut p: &mut T                                                         | real, m ⊢ &mut p: &mut T

 _, m ⊢ p: T                                                                      | _, m ⊢ p: T
 --------------------------------------------- "Deref"                            | --------------------------------------------- "Deref(EatOuter)"
 inh, m ⊢ &mut p: &mut T, T is not a reference                                    | inh, m ⊢ &mut p: &mut T, T is not a reference

 real, m ⊢ p: &T                                                                  | r, m ⊢ p: &T
 ------------------------ "Deref"                                                 | ------------------------ "Deref(EatInner, FallbackToOuter)"
 inh, m ⊢ &mut p: &mut &T                                                         | inh, m ⊢ &mut p: &mut &T

 real, ro ⊢ p: &mut T                                                             | inh, ro ⊢ p: &T
 ----------------------------- "Deref"                                            | ----------------------------- "Deref(EatInner, ForceReadOnly)"
 inh, ro ⊢ &mut p: &mut &mut T                                                    | inh, ro ⊢ &mut p: &mut &mut T

 real, rw ⊢ p: &mut T                                                             | inh, rw ⊢ p: &mut T
 ----------------------------- "Deref"                                            | ----------------------------- "Deref(EatInner)"
 inh, rw ⊢ &mut p: &mut &mut T                                                    | inh, rw ⊢ &mut p: &mut &mut T

                                                                                  | inh, m ⊢ p: &T
                                                                                  | ------------------------ "Deref(EatInner)"
                                                                                  | inh, m ⊢ &mut p: &&mut T

 real, ro ⊢ p: T                                                                  | real, ro ⊢ p: T
 -------------------- "DerefMutWithShared"                                        | -------------------- "DerefMutWithShared(EatOuter)"
 real, m ⊢ &p: &mut T                                                             | real, m ⊢ &p: &mut T

 _, ro ⊢ p: T                                                                     | _, ro ⊢ p: T
 ----------------------------------------- "DerefMutWithShared"                   | ----------------------------------------- "DerefMutWithShared(EatOuter)"
 inh, m ⊢ &p: &mut T, T is not a reference                                        | inh, m ⊢ &p: &mut T, T is not a reference

 real, ro ⊢ p: &T                                                                 | inh, ro ⊢ p: &T
 -------------------- "DerefMutWithShared"                                        | -------------------- "Deref(EatInner, ForceReadOnly)"
 inh, m ⊢ &p: &mut &T                                                             | inh, m ⊢ &p: &mut &T

 real, ro ⊢ p: &mut T                                                             | inh, ro ⊢ p: &T
 ------------------------ "DerefMutWithShared"                                    | ------------------------ "DerefMutWithShared(EatInner)"
 inh, m ⊢ &p: &mut &mut T                                                         | inh, m ⊢ &p: &mut &mut T

                                                                                  | r, m ⊢ ref x: T
                                                                                  | ------------------ "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref x: &T

                                                                                  | r, m ⊢ ref x: T
                                                                                  | ---------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref x: &mut T

                                                                                  | r, m ⊢ ref mut x: T
                                                                                  | ---------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref mut x: &T

                                                                                  | r, m ⊢ ref mut x: T
                                                                                  | -------------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref mut x: &mut T

 inh, m ⊢ x: &T                                                                   | inh, m ⊢ x: &T
 ------------------ "BindingBorrow"                                               | ------------------ "BindingBorrow"
 real, m ⊢ ref x: T                                                               | real, m ⊢ ref x: T

 inh, m ⊢ x: &mut T                                                               | inh, m ⊢ x: &mut T
 ---------------------- "BindingBorrow"                                           | ---------------------- "BindingBorrow"
 real, m ⊢ ref mut x: T                                                           | real, m ⊢ ref mut x: T

                                                                                  | 
 ----------- "Binding"                                                            | ----------- "Binding"
 r, m ⊢ x: T                                                                      | r, m ⊢ x: T

                                                                                  | 
 ------------------ "Binding"                                                     | ------------------ "Binding"
 real, m ⊢ mut x: T                                                               | real, m ⊢ mut x: T

                                                                                  |  
 ------------------ "Binding"                                                     |  
 inh, m ⊢ mut x: &T                                                               |  

                                                                                  |  
 ---------------------- "Binding"                                                 |  
 inh, m ⊢ mut x: &mut T                                                           |  


allow_ref_pat_on_ref_mut: true
always_inspect_bm: false
downgrade_mut_inside_shared: false -> true
eat_inherited_ref_alone: true
eat_mut_inside_shared: true
fallback_to_outer: false -> true
inherited_ref_on_ref: "EatOuter" -> "EatInner"
match_constructor_through_ref: true
mut_binding_on_inherited: "Keep" -> "Error"
ref_binding_on_inherited: "Error" -> "ResetBindingMode"
simplify_deref_mut: true
The current options can be fully described as the following set of rules.
The typing predicate looks like `p @ e: T`, where
- `e` is an expression
- `p` is a pattern;
- `T` is a type.

p0 @ e.0: T0,  p1 @ e.1: T1
--------------------------- "Constructor"
[p0, p1] @ e: [T0, T1]

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ e: &[T0, T1]

p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ e: &mut [T0, T1], e mutable

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
---------------------------------------- "ConstructorRef(ForceReadOnly)"
[p0, p1] @ e: &mut [T0, T1], e read-only

[p0, p1] @ &**e: &T
------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&mut T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &T

[p0, p1] @ &mut **e: &mut T
------------------------------------ "ConstructorMultiRef"
[p0, p1] @ e: &mut &mut T, e mutable

[p0, p1] @ &**e: &T
-------------------------------------- "ConstructorMultiRef(ForceReadOnly)"
[p0, p1] @ e: &mut &mut T, e read-only

p @ *e: T
---------------------------------- "Deref(EatOuter)"
&p @ e: &T, binding_mode(e) = move

p @ *e: T
------------------------------------------------------- "Deref(EatOuter)"
&p @ e: &T, binding_mode(e) = ref, T is not a reference

p @ *e: T
------------------------------------------ "Deref(EatOuter)"
&mut p @ e: &mut T, binding_mode(e) = move

p @ *e: T
------------------------------------------------------------------- "Deref(EatOuter)"
&mut p @ e: &mut T, binding_mode(e) = ref mut, T is not a reference

p @ &**e: &T
---------------------------------- "Deref(EatInner)"
&p @ e: &&T, binding_mode(e) = ref

p @ &**e: &T
------------------------------------------ "Deref(EatInner)"
&mut p @ e: &&mut T, binding_mode(e) = ref

p @ &mut **e: &mut T
------------------------------------------------------------- "Deref(EatInner)"
&mut p @ e: &mut &mut T, binding_mode(e) = ref mut, e mutable

p @ *e: &T
---------------------------------------------- "Deref(EatInner, FallbackToOuter)"
&mut p @ e: &mut &T, binding_mode(e) = ref mut

p @ &**e: &T
------------------------------------------ "Deref(EatInner, ForceReadOnly)"
&p @ e: &mut &T, binding_mode(e) = ref mut

p @ &**e: &T
--------------------------------------------------------------- "Deref(EatInner, ForceReadOnly)"
&mut p @ e: &mut &mut T, binding_mode(e) = ref mut, e read-only

p @ *&*e: T
-------------------------------------- "DerefMutWithShared(EatOuter)"
&p @ e: &mut T, binding_mode(e) = move

p @ *&*e: T
--------------------------------------------------------------- "DerefMutWithShared(EatOuter)"
&p @ e: &mut T, binding_mode(e) = ref mut, T is not a reference

p @ &*&**e: &T
-------------------------------------- "DerefMutWithShared(EatInner)"
&p @ e: &&mut T, binding_mode(e) = ref

p @ &*&**e: &T
---------------------------------------------- "DerefMutWithShared(EatInner)"
&p @ e: &mut &mut T, binding_mode(e) = ref mut

ref x @ *e: T
------------------------------------ "RefBindingResetBindingMode"
ref x @ e: &T, binding_mode(e) = ref

ref x @ *e: T
-------------------------------------------- "RefBindingResetBindingMode"
ref x @ e: &mut T, binding_mode(e) = ref mut

ref mut x @ *e: T
---------------------------------------- "RefBindingResetBindingMode"
ref mut x @ e: &T, binding_mode(e) = ref

ref mut x @ *e: T
------------------------------------------------ "RefBindingResetBindingMode"
ref mut x @ e: &mut T, binding_mode(e) = ref mut

x @ &e: &T
------------------------------------ "BindingBorrow"
ref x @ e: T, binding_mode(e) = move

x @ &mut e: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ e: T, binding_mode(e) = move


-------- "Binding"
x @ e: T


------------------------------------ "Binding"
mut x @ e: T, binding_mode(e) = move
