tests/snapshots/trace_cli@9567404033913002572.snap
---
source: tests/trace_cli.rs
info: "set stable_rust\n[&x]: &[AT]"
---
The two rulesets are described by the following sets of rules, with differences highlighted.
The old ruleset is on the left, and the new one on the right.

 real, m ⊢ p0: T0,  real, m ⊢ p1: T1                                              | real, m ⊢ p0: T0,  real, m ⊢ p1: T1
 --------------------------------------- "Constructor"                            | --------------------------------------- "Constructor"
 _, m ⊢ [p0, p1]: [T0, T1]                                                        | _, m ⊢ [p0, p1]: [T0, T1]

 inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1                                            | inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1
 ----------------------------------------- "ConstructorRef"                       | ----------------------------------------- "ConstructorRef"
 r, m ⊢ [p0, p1]: &[T0, T1]                                                       | r, m ⊢ [p0, p1]: &[T0, T1]

 inh, m ⊢ p0: &mut T0,  inh, m ⊢ p1: &mut T1                                      | inh, m ⊢ p0: &mut T0,  inh, m ⊢ p1: &mut T1
 ----------------------------------------------- "ConstructorRef"                 | ----------------------------------------------- "ConstructorRef"
 r, m ⊢ [p0, p1]: &mut [T0, T1]                                                   | r, m ⊢ [p0, p1]: &mut [T0, T1]

 inh, ro ⊢ [p0, p1]: &T                                                           | inh, ro ⊢ [p0, p1]: &T
 ------------------------ "ConstructorMultiRef"                                   | ------------------------ "ConstructorMultiRef"
 r, m ⊢ [p0, p1]: &&T                                                             | r, m ⊢ [p0, p1]: &&T

 inh, ro ⊢ [p0, p1]: &T                                                           | inh, ro ⊢ [p0, p1]: &T
 -------------------------- "ConstructorMultiRef"                                 | -------------------------- "ConstructorMultiRef"
 r, m ⊢ [p0, p1]: &&mut T                                                         | r, m ⊢ [p0, p1]: &&mut T

 inh, ro ⊢ [p0, p1]: &T                                                           | inh, ro ⊢ [p0, p1]: &T
 -------------------------- "ConstructorMultiRef"                                 | -------------------------- "ConstructorMultiRef"
 r, m ⊢ [p0, p1]: &mut &T                                                         | r, m ⊢ [p0, p1]: &mut &T

 inh, m ⊢ [p0, p1]: &mut T                                                        | inh, m ⊢ [p0, p1]: &mut T
 ------------------------------ "ConstructorMultiRef"                             | ------------------------------ "ConstructorMultiRef"
 r, m ⊢ [p0, p1]: &mut &mut T                                                     | r, m ⊢ [p0, p1]: &mut &mut T

 real, ro ⊢ p: T                                                                  | real, ro ⊢ p: T
 ------------------ "Deref"                                                       | ------------------ "Deref(EatOuter)"
 real, m ⊢ &p: &T                                                                 | real, m ⊢ &p: &T

 _, ro ⊢ p: T                                                                     |  
 --------------------------------------- "Deref"                                  |  
 inh, m ⊢ &p: &T, T is not a reference                                            |  

 real, ro ⊢ p: &T                                                                 | real, ro ⊢ p: T
 ------------------ "Deref"                                                       | ------------------ "Deref(EatBoth)"
 inh, m ⊢ &p: &&T                                                                 | inh, m ⊢ &p: &&T

 real, ro ⊢ p: &mut T                                                             |  
 ---------------------- "Deref"                                                   |  
 inh, m ⊢ &p: &&mut T                                                             |  

 real, m ⊢ p: T                                                                   | real, m ⊢ p: T
 -------------------------- "Deref"                                               | -------------------------- "Deref(EatOuter)"
 real, m ⊢ &mut p: &mut T                                                         | real, m ⊢ &mut p: &mut T

 _, m ⊢ p: T                                                                      |  
 ----------------------------------------------- "Deref"                          |  
 inh, m ⊢ &mut p: &mut T, T is not a reference                                    |  

 real, m ⊢ p: &T                                                                  |  
 -------------------------- "Deref"                                               |  
 inh, m ⊢ &mut p: &mut &T                                                         |  

 real, m ⊢ p: &mut T                                                              | real, m ⊢ p: T
 ------------------------------ "Deref"                                           | ------------------------------ "Deref(EatBoth)"
 inh, m ⊢ &mut p: &mut &mut T                                                     | inh, m ⊢ &mut p: &mut &mut T

                                                                                  | real, m ⊢ p: T
                                                                                  | -------------------------- "Deref(EatBoth)"
                                                                                  | inh, m ⊢ &mut p: &&mut T

 real, ro ⊢ p: T                                                                  |  
 ---------------------- "DerefMutWithShared"                                      |  
 real, m ⊢ &p: &mut T                                                             |  

 _, ro ⊢ p: T                                                                     |  
 ------------------------------------------- "DerefMutWithShared"                 |  
 inh, m ⊢ &p: &mut T, T is not a reference                                        |  

 real, ro ⊢ p: &T                                                                 | real, ro ⊢ p: T
 ---------------------- "DerefMutWithShared"                                      | ---------------------- "Deref(EatBoth)"
 inh, m ⊢ &p: &mut &T                                                             | inh, m ⊢ &p: &mut &T

 real, ro ⊢ p: &mut T                                                             |  
 -------------------------- "DerefMutWithShared"                                  |  
 inh, m ⊢ &p: &mut &mut T                                                         |  

                                                                                  | r, m ⊢ ref x: T
                                                                                  | -------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref x: &T

                                                                                  | r, m ⊢ ref x: T
                                                                                  | ------------------------ "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref x: &mut T

                                                                                  | r, m ⊢ ref mut x: T
                                                                                  | ------------------------ "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref mut x: &T

                                                                                  | r, m ⊢ ref mut x: T
                                                                                  | ---------------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref mut x: &mut T

 inh, m ⊢ x: &T                                                                   | inh, m ⊢ x: &T
 -------------------- "BindingBorrow"                                             | -------------------- "BindingBorrow"
 real, m ⊢ ref x: T                                                               | real, m ⊢ ref x: T

 inh, m ⊢ x: &mut T                                                               | inh, m ⊢ x: &mut T
 ------------------------ "BindingBorrow"                                         | ------------------------ "BindingBorrow"
 real, m ⊢ ref mut x: T                                                           | real, m ⊢ ref mut x: T

                                                                                  | 
 ------------- "Binding"                                                          | ------------- "Binding"
 r, m ⊢ x: T                                                                      | r, m ⊢ x: T

                                                                                  | 
 -------------------- "Binding"                                                   | -------------------- "Binding"
 real, m ⊢ mut x: T                                                               | real, m ⊢ mut x: T

                                                                                  | r, m ⊢ mut x: T
 -------------------- "Binding"                                                   | -------------------- "MutBindingResetBindingMode"
 inh, m ⊢ mut x: &T                                                               | inh, m ⊢ mut x: &T

                                                                                  | r, m ⊢ mut x: T
 ------------------------ "Binding"                                               | ------------------------ "MutBindingResetBindingMode"
 inh, m ⊢ mut x: &mut T                                                           | inh, m ⊢ mut x: &mut T


allow_ref_pat_on_ref_mut: true -> false
always_inspect_bm: false
dont_eat_mut_inside_shared: false
downgrade_mut_inside_shared: false
eat_inherited_ref_alone: true -> false
fallback_to_outer: false
inherited_ref_on_ref: "EatOuter" -> "EatBoth"
match_constructor_through_ref: true
mut_binding_on_inherited: "Keep" -> "ResetBindingMode"
ref_binding_on_inherited: "Error" -> "ResetBindingMode"
simplify_deref_mut: true
real, rw ⊢ [&x]: &[AT]
// Applying rule `ConstructorRef`
inh, ro ⊢ &x: &AT
// Type error for `inh, ro ⊢ &x: &AT`: OverlyGeneral(Type)
