tests/snapshots/trace_solver@11476299158837609649.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: ResetBindingMode
  bundle_name: ~
  request: "[mut ref x]: &[T]"
---
let [mut ref x]: &[T] = s
// Applying rule `ConstructorRef`
let mut ref x: &T = &(*s).0
// Applying rule `BindingBorrow`
let mut x: &&T = &&(*s).0
// Applying rule `MutBindingResetBindingMode`
let mut x: &T = &(*s).0
// Applying rule `MutBindingResetBindingMode`
let mut x: T = (*s).0
// Applying rule `Binding`
let mut x: T = (*s).0

// Final bindings (simplified):
let mut x: T = (*s).0;
